--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@
     .body-home {
         font-weight: bold;
         background-image: linear-gradient(200deg, rgb(91, 113, 211), rgb(109, 200, 253), rgb(220, 188, 250));
-        background-size: 100% 100vh;
+        background-size: 100% 150vh;
         z-index: -3;
     }
     .body-dayOne {
@@ -550,8 +550,16 @@
     z-index: -3;
 }
 
+.body-join {
+    font-weight: bold;
+    background-image: linear-gradient(200deg, rgb(91, 113, 211), rgb(109, 200, 253), rgb(220, 188, 250));
+    background-size: 100% 310vh;
+    z-index: -3;
+}
+
+
 #header{
-    z-index: 2;
+    z-index: 100;
 }
 
 
@@ -560,7 +568,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    z-index: 1;
+    z-index: 99;
     transition: 2s;
 }
 
